--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-query": "^3.32.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-tabs": "^3.1.1",
     "react-toastify": "^6.0.8",
+    "sass": "^1.43.4",
+    "swiper": "6.8.4",
     "typescript": "~3.7.2"
   },
   "scripts": {
